2010-12-13 Pierre Wieser <pwieser@trychlos.org>

	* docs/reference/Makefile.am:
	Remove call to GTKDOC_CHECK macro which makes 'make distcheck' fail.

2010-12-11 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/Makefile.am: Fix user's manual generation.

	Fic Miscellaneous API documentation.

	* docs/reference/nautilus-actions-docs.xml:
	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-core-utils.h:
	* src/api/na-gconf-monitor.h:
	* src/api/na-gconf-utils.h:
	* src/core/na-core-utils.c:
	* src/core/na-gconf-monitor.c:
	* src/core/na-gconf-utils.c: Updated accordingly.

	Fix NAObject API documentation.

	* docs/reference/nautilus-actions-docs.xml:
	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-icontext.h:
	* src/api/na-object-api.h:
	* src/core/na-icontext.c: Updated accordingly.

	Fix NAIDuplicable Interface documentation.

	* docs/reference/nautilus-actions-docs.xml:
	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-iduplicable.h:
	* src/api/na-object-menu.h:
	* src/api/na-object-profile.h:
	* src/core/na-iduplicable.c:
	* src/core/na-object-menu.c:
	* src/core/na-object-profile.c: Updated accordingly.

	Fix NAObjectAction documentation.

	* docs/reference/nautilus-actions-docs.xml:
	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-object-action.h:
	* src/core/na-icontext-factory.c:
	* src/core/na-object-action.c: Updated accordingly.

	Fix NAObjectItem documentation.

	* docs/reference/nautilus-actions-docs.xml:
	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-object-id.h:
	* src/api/na-object-item.h:
	* src/core/na-object-item.c: Updated accordingly.

	Fix NAObjectId documentation.

	* docs/reference/nautilus-actions-docs.xml:
	* docs/reference/nautilus-actions-sections.txt:
	* src/api/na-object-id.h:
	* src/api/na-object.h:
	* src/core/na-object-id.c: Updated accordingly.

	Fix NAObject documentation.

	* docs/reference/nautilus-actions-docs.xml